<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Control Panel" />

    <!--  1 1  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/step_start"
        style="@style/CardViewHeadButton"
        app:layout_constraintBottom_toTopOf="@id/step_connect_gatt"
        app:layout_constraintEnd_toStartOf="@id/step_choose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/text_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_start_service" />
    </androidx.cardview.widget.CardView>

    <!--  1 2  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/step_choose"
        style="@style/CardViewButton"
        app:layout_constraintBottom_toBottomOf="@id/step_start"
        app:layout_constraintEnd_toStartOf="@id/step_scan"
        app:layout_constraintStart_toEndOf="@id/step_start"
        app:layout_constraintTop_toTopOf="@id/step_start">

        <TextView
            android:id="@+id/text_choose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_choose" />
    </androidx.cardview.widget.CardView>

    <!--  1 3  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/step_scan"
        style="@style/CardViewButton"
        app:layout_constraintBottom_toBottomOf="@id/step_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/step_choose"
        app:layout_constraintTop_toTopOf="@id/step_start">

        <TextView
            android:id="@+id/text_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_scan" />
    </androidx.cardview.widget.CardView>

    <!--  2 1  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/step_connect_gatt"
        style="@style/CardViewHeadButton"
        app:layout_constraintBottom_toTopOf="@id/step_connect"
        app:layout_constraintEnd_toStartOf="@id/step_write"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_start">

        <TextView
            android:id="@+id/text_connect_gatt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_connect_gatt" />
    </androidx.cardview.widget.CardView>

    <!--  2 2  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/step_write"
        style="@style/CardViewButton"
        app:layout_constraintBottom_toBottomOf="@id/step_connect_gatt"
        app:layout_constraintEnd_toStartOf="@id/step_notified"
        app:layout_constraintStart_toEndOf="@id/step_connect_gatt"
        app:layout_constraintTop_toTopOf="@id/step_connect_gatt">

        <TextView
            android:id="@+id/text_write"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_write" />
    </androidx.cardview.widget.CardView>

    <!--  2 3  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/step_notified"
        style="@style/CardViewButton"
        app:layout_constraintBottom_toBottomOf="@id/step_connect_gatt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/step_write"
        app:layout_constraintTop_toTopOf="@id/step_connect_gatt">

        <TextView
            android:id="@+id/text_notified"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_notified" />
    </androidx.cardview.widget.CardView>

    <!--  3 1  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/step_connect"
        style="@style/CardViewHeadButton"
        app:layout_constraintBottom_toTopOf="@id/step_notify"
        app:layout_constraintEnd_toStartOf="@id/step_advertise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_connect_gatt">

        <TextView
            android:id="@+id/text_connect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_connect" />
    </androidx.cardview.widget.CardView>

    <!--  3 2  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/step_advertise"
        style="@style/CardViewButton"
        app:layout_constraintBottom_toBottomOf="@id/step_connect"
        app:layout_constraintEnd_toStartOf="@id/step_written"
        app:layout_constraintStart_toEndOf="@id/step_connect"
        app:layout_constraintTop_toTopOf="@id/step_connect">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_advertise" />
    </androidx.cardview.widget.CardView>

    <!--  3 3  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/step_written"
        style="@style/CardViewButton"
        app:layout_constraintBottom_toBottomOf="@id/step_connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/step_advertise"
        app:layout_constraintTop_toTopOf="@id/step_connect">

        <TextView
            android:id="@+id/text_written"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_written" />
    </androidx.cardview.widget.CardView>

    <!--  4 1  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/step_notify"
        style="@style/CardViewHeadButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/step_disconnect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_connect">

        <TextView
            android:id="@+id/text_notify"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_notify" />
    </androidx.cardview.widget.CardView>

    <!--  4 2  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/step_disconnect"
        style="@style/CardViewButton"
        app:layout_constraintBottom_toBottomOf="@id/step_notify"
        app:layout_constraintEnd_toStartOf="@id/step_stop"
        app:layout_constraintStart_toEndOf="@id/step_notify"
        app:layout_constraintTop_toTopOf="@id/step_notify">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_disconnect" />
    </androidx.cardview.widget.CardView>

    <!--  4 3  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/step_stop"
        style="@style/CardViewButton"
        app:layout_constraintBottom_toBottomOf="@id/step_notify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/step_disconnect"
        app:layout_constraintTop_toTopOf="@id/step_notify">

        <TextView
            android:id="@+id/text_stop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_shutdown" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>